--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="colorPrimary">#FFD81E5B</color>
     <color name="black">#FF000000</color>
+    <color name="gray">#666666</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
