--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.AnamnesisForm" parent="Theme.Material3.DayNight.NoActionBar">
-
+        <item name="colorPrimary">@color/colorPrimary</item>
     </style>
 
     <style name="Theme.AnamnesisForm" parent="Base.Theme.AnamnesisForm" />
